--- a/index.html
+++ b/index.html
@@ -176,8 +176,7 @@
 
             </section>
 
-            <section class="contenidopestañas" id="subPortafolio">
-                
+            <section class="contenidopestañas" id="Servicios">
             </section>
 
             <section class="contenidopestañas" id="subContacto">
