--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <div class="logo">
     
-                <img src="logo fatima.png" alt="">
+                <img src="Logo.png" alt="">
                 <strong>Fatima.</strong>
     
             </div>
