h1 en seccion de servicios

--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
             </section>
 
             <section class="contenidopestañas" id="Servicios">
+                <h1>prueba git</h1>
             </section>
 
             <section class="contenidopestañas" id="subContacto">
